// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiScreenReaderOnly adds an accessibility class to a child element and combines other classNames (foo, bar) given as props on the child 1`] = `
<p
  class="euiScreenReaderOnly foo bar"
>
  This paragraph is not visibile to sighted users but will be read by screenreaders.
</p>
`;

exports[`EuiScreenReaderOnly adds an accessibility class to a child element when used with no props 1`] = `
<p
  class="euiScreenReaderOnly"
>
  This paragraph is not visibile to sighted users but will be read by screenreaders.
</p>
`;
